<resources>
    <string name="app_name">Game Catalog</string>
    <string name="logo">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="no_data">No data</string>
    <string name="name">Aditya Ayatusy Syifa</string>
    <string name="email">adityaayatusy@gmail.com</string>
    <string name="title_about">About</string>
    <string name="games_list">Games list</string>
    <string name="top_game">Top game</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="clear_database">Clear Database</string>
    <string name="example_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="platforms">Platforms</string>
    <string name="release_date">Release Date</string>
    <string name="example_rating">3.5/5</string>
    <string name="label_rating">Rating</string>
    <string name="detail_game">Detail Game</string>
    <string name="title_favorite">Favorite</string>
    <string name="rating">%1$s/5</string>
    <string name="error">error:%1$s</string>
    <string name="search">Search</string>
    <string name="search_title">Search: %1$s</string>
</resources>