<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BagroundLayout"
    android:orientation="vertical"
    tools:context=".detail.DetailFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:text="@string/detail_game"
            style="@style/TextToolbar" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageGame"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/gray_200"
                android:src="@drawable/no_image"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/title"
                style="@style/TitleDetail"
                android:text="@string/example_title"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageGame"/>

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/loading"
                style="@style/SpinKitView.CubeGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:SpinKit_Color="@color/flat_gray_400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/desc"
                style="@style/ValueDetail"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/example_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loading" />

            <TextView
                android:id="@+id/label_platform"
                style="@style/SubTitleDetail"
                android:text="@string/platforms"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desc"/>
            <TextView
                android:id="@+id/platform"
                style="@style/ValueDetail"
                android:text="@string/platforms"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_platform"/>
            <TextView
                android:id="@+id/label_rating"
                style="@style/SubTitleDetail"
                android:text="@string/label_rating"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/platform"/>
            <TextView
                android:id="@+id/rating"
                style="@style/ValueDetail"
                android:text="@string/example_rating"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_rating"/>
            <TextView
                android:id="@+id/label_release_date"
                style="@style/SubTitleDetail"
                android:text="@string/release_date"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating"/>
            <TextView
                android:id="@+id/release_date"
                style="@style/ValueDetail"
                android:text="@string/example_date"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_release_date"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>